force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Owner, Director</fullName>
            </value>
            <value>
                <fullName>Chief Executive officer, CEO</fullName>
            </value>
            <value>
                <fullName>Sales department, Primary Contact</fullName>
            </value>
            <value>
                <fullName>Sales department, Account Management Contact</fullName>
            </value>
            <value>
                <fullName>Field Service department, Primary Contact</fullName>
            </value>
            <value>
                <fullName>Billing &amp; payment department, Primary contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>