force-app/main/default/objects/Contact/fields/Dispatch_Help_Desk_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Help_Desk_Department_Email__c</fullName>
    <label>Dispatch Help Desk Department Email</label>
    <type>Email</type>
</CustomField>