force-app/main/default/objects/Contact/fields/Dispatch_Help_Desk_Department_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Help_Desk_Department_Phone_No__c</fullName>
    <label>Dispatch Help Desk Department Phone No</label>
    <type>Phone</type>
</CustomField>