force-app/main/default/objects/Contact/fields/Escalation_Report_To__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Report_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation(Report To)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>