force-app/main/default/objects/Contact/fields/Job_title_Designation__c.field-meta.xml
<CustomField>
    <fullName>Job_title_Designation__c</fullName>
    <label>Job title/ Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>