force-app/main/default/objects/Contact/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <label>LinkedIn Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>