force-app/main/default/objects/Contact/fields/Name_of_OwnersDirector_of_the_Company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_OwnersDirector_of_the_Company__c</fullName>
    <label>Name of Owners/Director of the Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>