force-app/main/default/objects/Contact/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <displayFormat>Con-{0000}</displayFormat>
    <label>S. No</label>
    <type>AutoNumber</type>
</CustomField>