force-app/main/default/objects/Contact/fields/Sales_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Department_Email__c</fullName>
    <label>Sales Department Email</label>
    <type>Email</type>
</CustomField>