force-app/main/default/objects/Contact/fields/Sales_Department_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Department_Phone_No__c</fullName>
    <label>Sales Department Phone No</label>
    <type>Phone</type>
</CustomField>