force-app/main/default/objects/Contact/validationRules/First_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter first name.</errorMessage>
</ValidationRule>